src/test/ui/generic-associated-types/issue-74684-2.stderr
error[E0271]: type mismatch resolving `<{integer} as Fun>::F<'_> == [u8]`
  --> $DIR/issue-74684-2.rs:23:5
   |
LL |     bug(Box::new(x));
   |     ^^^ type mismatch resolving `<{integer} as Fun>::F<'_> == [u8]`
   |
note: expected this to be `[u8]`
  --> $DIR/issue-74684-2.rs:10:18
   |
LL |     type F<'a> = i32;
   |                  ^^^
note: required by a bound in `bug`
  --> $DIR/issue-74684-2.rs:13:28
   |
LL | fn bug<'a, T: ?Sized + Fun<F<'a> = [u8]>>(t: Box<T>) -> &'static T::F<'a> {
   |                            ^^^^^^^^^^^^ required by this bound in `bug`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
